# deno_fetch_decompression_throughput

./: .gitignore  Cargo.toml  README.md
examples/: large_data.txt  large_data.txt.br  super_fast_large_data_server.rs
js_script/: local_proxy_h1.js  local_proxy_h2.js
results/: results_brotli.json  results_text.json
src/: conn.rs  main.rs  traffic.rs
