[package]
name = "deno_fetch_decompression_throughput"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.1"
clap = { version = "4.5.18", features = ["derive"] }
futures = "0.3.30"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["server", "http2", "tokio", "full"] }
indicatif = "0.17.8"
log = "0.4.22"
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
